crates/autoresolve/tests/compile_fail/provide_chain_not_dependency.stderr
error[E0277]: the trait bound `A: DependencyOf<Unrelated>` is not satisfied
  --> tests/compile_fail/provide_chain_not_dependency.rs:51:25
   |
51 |     resolver.provide(A).when_injected_in::<Unrelated>();
   |                         ^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `DependencyOf<Unrelated>` is not implemented for `A`
  --> tests/compile_fail/provide_chain_not_dependency.rs:9:1
   |
 9 | pub struct A;
   | ^^^^^^^^^^^^
help: the trait `DependencyOf<Unrelated>` is implemented for `B`
  --> tests/compile_fail/provide_chain_not_dependency.rs:33:1
   |
33 | #[resolvable]
   | ^^^^^^^^^^^^^
note: required by a bound in `ProvideBuilder::<'r, Initial, Path>::when_injected_in`
  --> src/provide.rs
   |
   |     pub fn when_injected_in<Target>(self) -> ProvideBuilder<'r, Initial, Scoped<Target, Path>>
   |            ---------------- required by a bound in this associated function
...
   |         <Path as PathHead<Initial>>::Head: DependencyOf<Target>,
   |                                            ^^^^^^^^^^^^^^^^^^^^ required by this bound in `ProvideBuilder::<'r, Initial, Path>::when_injected_in`
   = note: this error originates in the attribute macro `resolvable` (in Nightly builds, run with -Z macro-backtrace for more info)
